fixed the site on mobile

--- a/src/pages/home.sass
+++ b/src/pages/home.sass
@@ -80,13 +80,13 @@
         color: $black
 
   .featured-container
-    padding: rscale(80, 120) 0
+    padding: rscale(80, 160) 0
 
     h3
       text-transform: uppercase
       font-family: $factora
       letter-spacing: 0.05rem
-      margin: 0 0 rscale(24,40) 0
+      margin: 0 0 rscale(40, 80) 0
       font-size: 13px
       line-height: 130%
       text-align: center
@@ -97,7 +97,7 @@
 
       li
         list-style: none
-        font-size: 8vw
+        font-size: rscale(40, 100)
         font-family: $selfmodern
         font-style: italic
         white-space: nowrap
